# speech-to-text-gpt

./: .gitignore  Cargo.toml  Dockerfile  readme.md
src/: audio_input.rs  dialog_broker.rs  gpt_requests.rs  lib.rs  main.rs  message_broker.rs  recorder.rs  redis_broker.rs  utils.rs
tests/: gpt_requests_tests.rs
