[package]
name = "speech-to-text-chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pv_cheetah = "*"
pv_recorder = "*"
chrono = "0.4.20"
clap = "3.2.16"
ctrlc = "3.2.2"
hound = "3.4.0"
itertools = "0.10.3"
dotenv = "0.15.0"
