[package]
name = "speech-to-text-chatgpt"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration_tests"
path = "tests/gpt_requests_tests.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
pv_cheetah = "*"
pv_recorder = "*"
chrono = "0.4.20"
clap = "3.2.16"
ctrlc = "3.2.2"
hound = "3.4.0"
itertools = "0.10.3"
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
reqwest = {version = "0.11.16", features = ["json"] }
serde_json = "1.0.95"
